[package]
name = "lol-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.2" 
reqwest = { version = "0.12.8", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.213", features = ["derive"] }
dotenv = "0.15"
serde_json = "1.0"
riven = { version = "2.56.0", features = [ "nightly" ] }