[package]
name = "lol-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity =  { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0"
riven = { version = "2.56.0", features = [ "nightly" ] }
anyhow = "1.0.92"
async-trait = "0.1.83"
futures = "0.3.31"
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }